Drivers do not work in node groups. #46587

Closed
opened 2015-10-24 18:03:06 +02:00 by Philip Holzmann · 19 comments

System Information
Windows 7 64 bit with 64 bit Blender

Blender Version
Broken: 2.76.2 fbca69c

Short description of error
Drivers do not work, when they are inside a node group.
(Didn't test it outside the compositor.)

Exact steps for others to reproduce the error
bug.blend
The value node on the top left (labeled "#frame") has a driver which takes the current frame number.
The group node below contains a value node also has a driver, and should output the current frame number. But this does NOT work.

So you can see it, if you render, the output of the group node is displayed on the left; the output of the (ungrouped) value node is displayed on the right.

**System Information** Windows 7 64 bit with 64 bit Blender **Blender Version** Broken: 2.76.2 fbca69c **Short description of error** Drivers do not work, when they are inside a node group. (Didn't test it outside the compositor.) **Exact steps for others to reproduce the error** [bug.blend](https://archive.blender.org/developer/F247154/bug.blend) The value node on the top left (labeled "#frame") has a driver which takes the current frame number. The group node below contains a value node also has a driver, and should output the current frame number. But this does NOT work. So you can see it, if you render, the output of the group node is displayed on the left; the output of the (ungrouped) value node is displayed on the right.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Foaly

Added subscriber: @Foaly

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2015-10-27 19:22:57 +01:00

This is something which can't really work in the old depsgraph but something i would expect to work in the new one. Need to have some closer look tho.

This is something which can't really work in the old depsgraph but something i would expect to work in the new one. Need to have some closer look tho.

This issue was referenced by 97c8619b42

This issue was referenced by 97c8619b421b979dc4b05ed0959e90de532813ba

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @mrburns

Added subscriber: @mrburns

Hi,

the problem still exists!
I have the x value of a blur node driven by the Z location of the default cube. This works.
But if I put the blur node into a group then it does not work anymore, the x value is always zero.

My Blender version is 2.76b, Date 2015-11-03- 10:56, Hash f337fea.
I use the Windows 64 bit version

Best regards,

Mr. Burns

Hi, the problem still exists! I have the x value of a blur node driven by the Z location of the default cube. This works. But if I put the blur node into a group then it does not work anymore, the x value is always zero. My Blender version is 2.76b, Date 2015-11-03- 10:56, Hash f337fea. I use the Windows 64 bit version Best regards, Mr. Burns

Hi,

I also tested with version 2.76 Date 2016-01-20 00:43 hash bda0820, but still the same. The Z location of the cube is 2.15.
The blur node inside group does not update the x value. It shows 3.
The blur node out of group does it correctly. It shows 2.
(both use same driver)

Driver_inside_group_not_working.jpg

Hi, I also tested with version 2.76 Date 2016-01-20 00:43 hash bda0820, but still the same. The Z location of the cube is 2.15. The blur node inside group does not update the x value. It shows 3. The blur node out of group does it correctly. It shows 2. (both use same driver) ![Driver_inside_group_not_working.jpg](https://archive.blender.org/developer/F275303/Driver_inside_group_not_working.jpg)

If this doesn't work after switching to the new dependency graph, then please make a new bug report including all the details and .blend file demonstrating the problem.

If this doesn't work after switching to the new dependency graph, then please make a new bug report including all the details and .blend file demonstrating the problem.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

@mrburns, you need to explicitly enable the new dependency graph by launching Blender from the command line with the --enable-new-depsgraph argument.

@mrburns, you need to explicitly enable the new dependency graph by launching Blender from the command line with the `--enable-new-depsgraph` argument.

Added subscriber: @lukas.remis

Added subscriber: @lukas.remis

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

This bug is still present in 2.79b (Mac version)drivers_error.blend.
Attaching test file. I try to drive some values inside a group with the input value from the group node.

Tried starting Blender with --enable-new-depsgraph - still drivers do not work in node groups.

This bug is still present in 2.79b (Mac version)[drivers_error.blend](https://archive.blender.org/developer/F3727634/drivers_error.blend). Attaching test file. I try to drive some values inside a group with the input value from the group node. Tried starting Blender with --enable-new-depsgraph - still drivers do not work in node groups.

Please make a simple file where it's clear which exact drivers do not work. If it's possible top reproduce with one driver, that'd be way more clear to understand desired behavior.

In this example some of the drivers are actually set to constant values, and some other drivers are trying to drive nodes of same node tree. Note that this should probably work, but chained drivers are not yet supported (as in, node_a drivers node_b and node_b drives node_c of the same tree).

Please make a simple file where it's clear which exact drivers do not work. If it's possible top reproduce with one driver, that'd be way more clear to understand desired behavior. In this example some of the drivers are actually set to constant values, and some other drivers are trying to drive nodes of same node tree. Note that this should probably work, but chained drivers are not yet supported (as in, node_a drivers node_b and node_b drives node_c of the same tree).
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

Since last asking for information it has been 7 or more days, due to the policy of our bug tracker we will have to archive the report until the requested information is given.

Since last asking for information it has been 7 or more days, due to the policy of our bug tracker we will have to archive the report until the requested information is given.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46587
No description provided.